# medusa

./: .travis.yml  appveyor.yml
arch/: avr8.yaml
inc/medusa/: document.hpp
script/: generate_qm_files.bat  update_ts_files.bat
src/arch/: CMakeLists.txt
src/core/: document.cpp
src/db/: CMakeLists.txt
src/db/lz4text/: CMakeLists.txt  lz4text_db.cpp  lz4text_db.hpp  main.cpp
src/tools/qt/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Resources.qrc
translations/: deu.ts  en.qm  en.ts  ru.qm  rus.ts
